change login page font colors for easy to visible in mobilr view.

--- a/Projects/Login Page/index.html
+++ b/Projects/Login Page/index.html
@@ -71,7 +71,7 @@
             <div class="panel right-panel">
                 <div class="content">
                     <h3>One of Us ?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, natus veritatis laboriosam sunt reprehenderit amet suscipit libero labore dolorum minus voluptatem tempore dolores exercitationem molestias ratione? Itaque maiores nisi modi!</p>
+                    <p style="background-color:#59795C;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, natus veritatis laboriosam sunt reprehenderit amet suscipit libero labore dolorum minus voluptatem tempore dolores exercitationem molestias ratione? Itaque maiores nisi modi!</p>
                     <button class="btn transparent" id="sign-in-button">Sign In</button>
                 </div>
                 <img src="" class="image" alt="">
